--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
   </header>
 
   <div class="legend">
-    <div class="legend-item"><span class="swatch"></span> Holiday / Sun / 2nd & 4th Sat</div>
+    <div class="legend-item"><span class="swatch"></span> Holiday / Sunday / Second & Fourth Saturday</div>
   </div>
 
   <div class="calendar-wrapper">
